Fix for creation of new flosses

The creation of new flosses through the palette manager dialog were
not being saved in the scheme leading to crashes when the patterns were
reloaded.
BUG: 362431